Optimized code and database connection